# swig-examples

./: README.md
A-HelloSWIG/: A-HelloSWIG.sln
A-HelloSWIG/simple/: example.cpp  example.h  example.i  simple.vcxproj  simple.vcxproj.filters
A-HelloSWIG/usesimple/: Program.cs
A-HowSWIGWork/: principle.drawio
A-HowSWIGWork/simple/: config.h  example.c  example.cpp  example.h  simple.vcxproj  simple.vcxproj.filters
A-HowSWIGWork/simple_csharp/: simple.cs  simplePINVOKE.cs
A-HowSWIGWork/simple_wrap/: example_wrap.cpp  simple_wrap.vcxproj  simple_wrap.vcxproj.filters
A-HowSWIGWork/usesimple/: Program.cs
A-HowSWIGWorkClass/: A-HowSWIGWorkClass.sln  principle.drawio
A-HowSWIGWorkClass/simple/: config.h  person.cpp  simple.vcxproj
A-HowSWIGWorkClass/simple_csharp/: person.cs  simplePINVOKE.cs
A-HowSWIGWorkClass/simple_wrap/: person_wrap.cpp
A-HowSWIGWorkClass/usesimple/: Program.cs  usesimple.csproj
B-SwigAndCMake/: CMakeLists.txt  common.cmake
B-SwigAndCMake/include/: config.h
B-SwigAndCMake/include/simple/: hello.h
B-SwigAndCMake/src/: CMakeLists.txt
B-SwigAndCMake/src/simple/: CMakeLists.txt  hello.cpp
B-SwigAndCMake/src/swig/: CMakeLists.txt
B-SwigAndCMake/src/swig/dotnet/: CMakeLists.txt  dotnet_project_template.csproj.in  swigdotnet.cmake
B-SwigAndCMake/src/swig/dotnet/simple.swig/: CMakelists.txt  simple.i
B-SwigAndCMake/test/: Program.cs  csharp_test.csproj
D-MultipleInheritanceAndInterface/: classdiagram.puml  多继承与接口.md
D-MultipleInheritanceAndInterface/A-interface_impl/: example.hpp  example.i  idescription.hpp
D-MultipleInheritanceAndInterface/B-interface/: example.i  idescription.hpp
D-MultipleInheritanceAndInterface/C-interface_custom/: example.hpp  example.i
D-MultipleInheritanceAndInterface/D-TemplateAndInterface/: example.hpp  example.i  idescription.hpp
Z-DotnetProperty/A-HowDotnetPropertyWork/simple/: person.cpp  person.h  simple.vcxproj.filters
Z-DotnetProperty/A-HowDotnetPropertyWork/simple_csharp/: person.cs  simplePINVOKE.cs  simple_csharp.csproj
Z-DotnetProperty/B-SWIGSuppostDotnetProperty/: readme.md
(+6 files in other folders)
